2007-11-25  KUBO Takehiro  <kubo@jiubao.org>
	release as 1.0.0 again.
	* ext/oci8/stmt.c, test/test_dbi.rb: fix a problem when binding
	    ''(empty string) via dbi.

2007-11-25  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.0-rc3 and 1.0.0.
	* VERSION: change version to 1.0.0.
	* dist-files: add test/test_metadata.rb.
	* lib/DBD/OCI8/OCI8.rb, lib/oci8.rb.in, test/test_metadata.rb:
	    rename OCI8::Metadata::Column#is_null? to 
	    OCI8::Metadata::Column#nullable?.
	* test/test_oci8.rb: add asserts binding Nan, +Infinity and
	    -Inifinty.

2007-11-18  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: add StatementHandle#column_info.
	   refine DatabaseHandle#columns.
	* test/test_dbi.rb: add a testcase for StatementHandle#column_info
	   and DatabaseHandle#columns.

2007-11-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c: add OCIError#initialize(msg, code = nil).
	* lib/oci8.rb.in: add OCI8#describe_table(table_name),
	   OCI8::Metadata::Table and OCI8::Metadata::View.
	* test/test_metadata.rb: fix test_metadata for OCI8#describe_table.
	   add test_error_describe_table.

2007-11-17  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: OCI8::Cursor#fetch_hash accepts a block now.
	   OCI8#commit and OCI8#rollback return self now. They had returned
	   an OCISvcCtx which is internally used.
	* test/test_oci8.rb: add a test for fetch_hash with a block.
	* ext/oci8/oci8.h: fix a potential bug.
	     http://rubyforge.org/forum/forum.php?thread_id=19213&forum_id=1078
	* ext/oci8/attr.c: fix signedness. Logically this won't be related with
	   the following URL's problem. But there is a few possibility.
	     http://rubyforge.org/forum/forum.php?thread_id=15158&forum_id=1078

2007-11-16  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add OCI8::Cursor#column_metadata and a new class
	   OCI8::Metadata::Column.
	* test/test_all.rb, test/test_metadata.rb: add testcases for
	   OCI8::Metadata::Column.
